Veritabanından gönderileri göstermek için template'ler değiştirildi

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,19 @@
 <html>
  <head>
         <title>merve'nin blogu</title>
+     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     </head>
     <body>
-        <h1>Ilk is</h1>
-        <p>bu yaptiklarim gelecekte basit gelecek olsa da ilk adimlar her zaman iyidir</p>
-        <em>cok onemli</em>
-        <strong>coook onemli</strong>
-        {% for post in posts %}
+       <div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+{% for post in posts %}
     <div>
         <p>published: {{ post.published_date }}</p>
         <h1><a href="">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endfor %}
-        <p>Merhaba!</p>
-        <p>Çalışıyor!</p>
     </body>
 </html>
