--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,18 +2,22 @@
  <head>
         <title>merve'nin blogu</title>
      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    </head>
-    <body>
+ </head>
+ <body>
        <div>
     <h1><a href="/">Django Girls Blog</a></h1>
-</div>
+       </div>
 
-{% for post in posts %}
+  {% for post in posts %}
     <div>
         <p>published: {{ post.published_date }}</p>
         <h1><a href="">{{ post.title }}</a></h1>
         <p>{{ post.text|linebreaksbr }}</p>
     </div>
-{% endfor %}
-    </body>
+       <div>
+           <p>Merhaba!</p>
+           <p>Çalışıyor!</p>
+       </div>
+  {% endfor %}
+ </body>
 </html>
